[gd_scene load_steps=3 format=3 uid="uid://xeggsmedqiyg"]

[ext_resource type="Script" uid="uid://x8tg1s01f3og" path="res://example_scenes/save_load_example/save_load_ui.gd" id="1_bc6go"]

[sub_resource type="LabelSettings" id="LabelSettings_bc6go"]
font_size = 40

[node name="SaveLoadExamples" type="Node2D"]
script = ExtResource("1_bc6go")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_left = 26.0
offset_top = 12.0
offset_right = 145.0
offset_bottom = 78.0

[node name="SaveButton" type="Button" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quick Save"

[node name="LoadButton" type="Button" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quick Load"

[node name="SaveFileName" type="LineEdit" parent="UI"]
unique_name_in_owner = true
offset_left = 38.0
offset_top = 182.0
offset_right = 292.0
offset_bottom = 213.0
placeholder_text = "Enter save file name here..."

[node name="Label" type="Label" parent="UI/SaveFileName"]
layout_mode = 0
offset_top = -30.0
offset_right = 118.0
offset_bottom = -7.0
text = "Save File Name"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI"]
offset_left = 26.0
offset_top = 223.0
offset_right = 224.0
offset_bottom = 289.0

[node name="SaveCustomButton" type="Button" parent="UI/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Save with Custom Name"

[node name="LoadCustomButton" type="Button" parent="UI/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Load with Custom Name"

[node name="SceneName" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 60.0
offset_right = 78.0
offset_bottom = 115.0
grow_horizontal = 2
text = "SCENE 1"
label_settings = SubResource("LabelSettings_bc6go")

[node name="Instructions" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 50.0
offset_right = -108.0
offset_bottom = 73.0
grow_horizontal = 0
text = "To Test Scene Changing:
Run Scene 1
Quick Save
Close Game
Run Scene 2
Quick Load

F1 is quicksave and F5 is quickload"
horizontal_alignment = 2
